namespace/media/huntarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huntarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huntarr
  template:
    metadata:
      labels:
        app: huntarr
    spec:
      runtimeClassName: youki
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: huntarr
          image: docker.io/huntarr/huntarr:latest@sha256:93edb4a72b3e7753a720baeed0b05c77a676920f9b90d4f6f5aea09cd3f1d2b4
          imagePullPolicy: Always
          ports:
            - containerPort: 9705
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: huntarr-config
