namespace/media/huntarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr
  namespace: media
spec:
  selector:
    app: huntarr
  ports:
    - port: 9705
      targetPort: 9705
      protocol: TCP
      name: huntarr
  type: ClusterIP
