namespace/media/huntarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: huntarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`huntarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: huntarr
          port: 9705
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: huntarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`huntarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: huntarr
          port: 9705
